Countries and service section implemented

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi exercitationem a placeat libero.
                     Deleniti alias dolorum excepturi quasi quidem eos libero veritatis cupiditate veniam, illo vel
                     similique ad commodi quis. Maiores quisquam velit sint laudantium necessitatibus mollitia eos
-                    quidem, placeat officiis tenetur. Atque ab provident magnam voluptas nam corporis aliquam? 
+                    quidem, placeat officiisgit init tenetur. Atque ab provident magnam voluptas nam corporis aliquam?
                 </p>
                 <div class="btn-box">
                     <button class="btn">Get Started</button>
@@ -31,7 +31,57 @@
         </div>
 
     </header>
-
+    <section class="services">
+        <div class="service-box">
+            <div class="service-heading">
+                <p>SERVICES</p>
+                <h2>Why book using Travello</h2>
+            </div>
+            <div class="service-card-container">
+                <div class="service-card service-card-1">
+                    <div class="service-icon">
+                        <img src="https://img.icons8.com/?size=48&id=fy0Nwq69liej&format=png" alt="">
+                    </div>
+                    <h2>All You Needs</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolor?</p>
+                </div>
+                <div class="service-card service-card-2">
+                    <div class="service-icon">
+                        <img src="https://img.icons8.com/?size=48&id=fy0Nwq69liej&format=png" alt="">
+                    </div>
+                    <h2>All You Needs</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolor?</p>
+                </div>
+                <div class="service-card service-card-3">
+                    <div class="service-icon">
+                        <img src="https://img.icons8.com/?size=48&id=fy0Nwq69liej&format=png" alt="">
+                    </div>
+                    <h2>All You Needs</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolor?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="countries">
+        <div class="countries-box">
+            <div class="countries-heading service-heading">
+                <p>COUNTRIES WE COVER</p>
+                <h2>Explore all  countries in Asia</h2>
+            </div>
+            <div class="country-card-container">
+                <div class="country-card"><h2>Japan</h2></div>
+                <div class="country-card"><h2>Bangladesh</h2></div>
+                <div class="country-card"><h2>India</h2></div>
+                <div class="country-card"><h2>Bhutan</h2></div>
+                <div class="country-card"><h2>China</h2></div>
+                <div class="country-card"><h2>Nepal</h2></div>
+            </div>
+            <div class="btn-container">
+                <button class="btn">Explore All Countries</button>
+            </div>
+            
+        </div>
+    </section>
 </body>
 
 </html>
