remaining section added

--- a/index.html
+++ b/index.html
@@ -62,25 +62,124 @@
             </div>
         </div>
     </section>
+    <section class="spot">
+        <div class="spot-box">
+            <div class="spot-heading service-heading">
+                <p>BEST OF ASIA</p>
+                <h2>Explore the top spots of Asia</h2>
+            </div>
+            <div class="spot-card-container">
+                <div class="spot-card">
+                    <div class="spot-card-img">
+                        <img src="./images/chaina-wall.png" alt="">
+                    </div>
+                    <div class="spot-card-content">
+                        <h2>Great Wall of China</h2>
+                        <img width="50px" src="./images/chaina.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi atque, labore culpa delectus
+                            vitae omnis voluptate libero! Vero, itaque eveniet! Eligendi, quos illo tenetur perferendis
+                            accusantium accusamus debitis non quibusdam.
+                        </p>
+                        <button class="btn">Explore Now</button>
+                    </div>
+                </div>
+                <div class="spot-card">
+                    <div class="spot-card-content">
+                        <h2>Great Wall of China</h2>
+                        <img width="50px" src="./images/chaina.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi atque, labore culpa delectus
+                            vitae omnis voluptate libero! Vero, itaque eveniet! Eligendi, quos illo tenetur perferendis
+                            accusantium accusamus debitis non quibusdam.
+                        </p>
+                        <button class="btn">Explore Now</button>
+                    </div>
+                    <div class="spot-card-img">
+                        <img src="./images/coxsbazar.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <section class="countries">
         <div class="countries-box">
             <div class="countries-heading service-heading">
                 <p>COUNTRIES WE COVER</p>
-                <h2>Explore all  countries in Asia</h2>
+                <h2>Explore all countries in Asia</h2>
             </div>
             <div class="country-card-container">
-                <div class="country-card"><h2>Japan</h2></div>
-                <div class="country-card"><h2>Bangladesh</h2></div>
-                <div class="country-card"><h2>India</h2></div>
-                <div class="country-card"><h2>Bhutan</h2></div>
-                <div class="country-card"><h2>China</h2></div>
-                <div class="country-card"><h2>Nepal</h2></div>
+                <div class="country-card">
+                    <h2>Japan</h2>
+                </div>
+                <div class="country-card">
+                    <h2>Bangladesh</h2>
+                </div>
+                <div class="country-card">
+                    <h2>India</h2>
+                </div>
+                <div class="country-card">
+                    <h2>Bhutan</h2>
+                </div>
+                <div class="country-card">
+                    <h2>China</h2>
+                </div>
+                <div class="country-card">
+                    <h2>Nepal</h2>
+                </div>
             </div>
             <div class="btn-container">
                 <button class="btn">Explore All Countries</button>
             </div>
-            
+
         </div>
+    </section>
+    <section class="reviews">
+        <div class="reviews-box container">
+            <div class="revies-heading service-heading">
+                <p>TOURIST LOVE US</p>
+                <h2>Checkout all our reviews</h2>
+            </div>
+            <div class="reviews-card-container">
+                <div class="review-card">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quidem, repudiandae incidunt
+                        ullam at ipsa ea reprehenderit est. Harum magnam tempora facilis numquam! Architecto ab
+                        reprehenderit, nobis ducimus porro voluptatibus labore qui voluptatem officia. Quod aperiam
+                        delectus inventore culpa, blanditiis cumque a mollitia nesciunt magnam distinctio quisquam
+                        excepturi maxime?
+                    </p>
+                    <h3>Md. Jahir Uddin Babar</h3>
+                    <p>Software Engineer - IT</p>
+                </div>
+                <div class="review-card">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quidem, repudiandae incidunt
+                        ullam at ipsa ea reprehenderit est. Harum magnam tempora facilis numquam! Architecto ab
+                        reprehenderit, nobis ducimus porro voluptatibus labore qui voluptatem officia. Quod aperiam
+                        delectus inventore culpa, blanditiis cumque a mollitia nesciunt magnam distinctio quisquam
+                        excepturi maxime?
+                    </p>
+                    <h3>Md. Jahir Uddin Babar</h3>
+                    <p>Software Engineer - IT</p>
+                </div>
+                <div class="review-card">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quidem, repudiandae incidunt
+                        ullam at ipsa ea reprehenderit est. Harum magnam tempora facilis numquam! Architecto ab
+                        reprehenderit, nobis ducimus porro voluptatibus labore qui voluptatem officia. Quod aperiam
+                        delectus inventore culpa, blanditiis cumque a mollitia nesciunt magnam distinctio quisquam
+                        excepturi maxime?
+                    </p>
+                    <h3>Md. Jahir Uddin Babar</h3>
+                    <p>Software Engineer - IT</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="newsletter">
+        <section class="newsletter-card container">
+            <form action="">
+                <input type="text" placeholder="write your email">
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </section>
 </body>
 
